--- a/User List/User List.css
+++ b/User List/User List.css
@@ -14,6 +14,20 @@
 	width: 80%;
 }
 
+.o-page-heading {
+	margin-bottom: 1rem;
+}
+
+.o-page-body {
+	display: flex;
+	justify-content: start;
+	align-items: start;
+	width: 100%;
+	height: 100%;
+	background-color: var(--Eggshell);
+	border: 1px solid var(--Dark-Smoke);
+}
+
 .o-user-list__item {
 	margin-top: 1rem;
 }
