--- a/Blogs/Blogs.css
+++ b/Blogs/Blogs.css
@@ -49,3 +49,45 @@
 .c-page-heading {
 	color: var(--Cadet-Blue);
 }
+
+.o-blog-list {
+	display: flex;
+	justify-content: start;
+	align-items: start;
+	flex-wrap: wrap;
+}
+
+.o-blog-list__item {
+	width: 25%;
+	height: 50vh;
+	background-color: var(--Deep-Space-Sparcle);
+	border: 1px solid var(--Eggshell);
+}
+
+.c-post__image {
+	display: flex;
+	width: 100%;
+	height: 30vh;
+}
+
+.c-post__image-pic {
+	object-fit: cover;
+	object-position: center;
+}
+
+.c-post__details {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: start;
+	height: 20vh;
+	padding: 1rem;
+}
+
+.c-post__title {
+	color: var(--Eggshell);
+}
+
+.c-post__author {
+	color: var(--Straw);
+}
