--- a/User Blog List/User Blog List.css
+++ b/User Blog List/User Blog List.css
@@ -42,6 +42,7 @@
 	display: flex;
 	justify-content: space-around;
 	width: 100%;
+	height: 2rem;
 	background-color: var(--Cadet-Blue);
 	padding: 0.3rem 0;
 }
@@ -56,8 +57,9 @@
 	display: flex;
 	justify-content: space-around;
 	background-color: var(--Sheldon-Blue);
-	padding: 0.3rem 0;
+
 	margin: 0.2rem 0;
+	height: 2rem;
 }
 
 .c-blogs-table__row:hover {
@@ -68,4 +70,6 @@
 	width: 20%;
 	text-align: center;
 	color: var(--Charlston-Green);
+	line-height: 2rem;
+	overflow: hidden;
 }
