updated login page

--- a/Login/Login.css
+++ b/Login/Login.css
@@ -1,121 +1,79 @@
-:root {
-    --Cadet-Blue: #51A3A3;
-    --Aztec-Gold: #CB904D;
-    --Deep-Space-Sparcle: #466362;
-    --Straw: #DFCC74;
-    --Medium-Spring-Bud: #C3E991;
-
-    --Charlston-Green: #2D2D2A;
-    --Honeydew: #F1F7EE;
-    --English-Green: #19535F;
-    --Eggshell: #EAF0CE;
-    --Sheldon-Blue: #7D98A1;
-
-    --Dark-Smoke: #707070;
-    --Red-Wine: #E92424;
+.o-main-area {
+	grid-area: main-area;
+	background-color: white;
+	width: 100vw;
+	display: flex;
+	justify-content: center;
 }
 
-.form-section {
-    height: 100%;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.o-section-container {
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: start;
+	width: 80%;
+	margin: 2rem 0;
 }
 
-.form-card {
-    height: 244px;
-    width: 414px;
-    background-color: var(--Eggshell);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    border-radius: 20px;
-    border: 1px solid var(--Dark-Smoke);
+.o-page-heading {
+	margin-bottom: 1rem;
 }
 
-.form-card__head {
-    width: 100%;
-    height: 82px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.o-page-body {
+	display: flex;
+	justify-content: start;
+	align-items: start;
+	width: 100%;
+	height: 100%;
+	background-color: var(--Eggshell);
+	border: 1px solid var(--Dark-Smoke);
 }
 
-.form-card__head h2 {
-    font-size: 28px;
-    text-align: center;
-    color: var(--Aztec-Gold);
-    line-height: 34px;
+.c-page-heading {
+	color: var(--Cadet-Blue);
 }
 
-.form-card__body {
-    width: 100%;
-    height: 162px;
+.c-form {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 1rem;
+}
+.c-form__body {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	align-items: center;
+	height: 100%;
+	width: 30%;
+}
+.c-form-input {
+	display: flex;
+	justify-content: center;
+	align-items: start;
+	flex-direction: column;
+	width: 100%;
+	margin-bottom: 1rem;
+}
+.c-form-input__label {
+	color: var(--Cadet-Blue);
+	width: 100%;
+}
+.c-form-input__data {
+	height: 1.3rem;
+	width: 100%;
 }
 
-.form-card__body .form {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    align-items: center;
-    height: 162px;
+.c-form-button {
+	margin: 1rem;
+	width: 100%;
 }
-
-.form-inputs {
-    height: 41px;
-    width: 334px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-bottom: 8px;
-    
-
+.c-form-button__submit {
+	width: 100%;
+	background-color: var(--Deep-Space-Sparcle);
+	border: none;
+	color: white;
+	height: 2rem;
 }
-
-.form-inputs label {
-    font-size: 16px;
-    color: var(--Sheldon-Blue);
-    line-height: 19px;
-    height: 19px;
-    width: 100%;
-}
-
-.form-inputs input {
-    height: 20px;
-    border: 1px solid var(--Dark-Smoke);
-    font-size: 14px;
-    
-}
-
-.form-inputs input:focus {
-    background-color: var(--Medium-Spring-Bud);
-    border: none;
-}
-
-.form-button {
-    display: flex;
-    justify-content: flex-end;
-    width: 334px;
-    height: 24px;
-    margin-top: 16px;
-
-}
-
-.form-card__body .form .button {
-    width: 116px;
-    height: 24px;
-    line-height: 24px;
-    background-color: var(--Cadet-Blue);
-    border: none;
-    border-radius: 5px;
-    border: 1px solid var(--Dark-Smoke);
-    font-size: 16px;
-    color: white;
-    padding: 0px
-}
-
-
-
-
