--- a/index.css
+++ b/index.css
@@ -14,6 +14,7 @@ html {
 	font-family: 'Montserrat', sans-serif;
 	outline: 1px solid greenyellow;
 	height: 100%;
+	scroll-behavior: smooth;
 }
 
 /* Remove default padding */
