--- a/Blog Page/Blog Page.css
+++ b/Blog Page/Blog Page.css
@@ -28,9 +28,15 @@
 	background-color: var(--Eggshell);
 	border: 1px solid var(--Dark-Smoke);
 }
-
 .c-page-heading {
 	color: var(--Cadet-Blue);
+}
+.c-blog {
+	height: 2000px;
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: center;
 }
 
 .c-blog__header {
@@ -55,12 +61,13 @@
 
 .c-blog__content {
 	columns: 2;
-	column-gap: 1rem;
+	width: 100%;
 	text-align: justify;
 	font-size: 0.9rem;
 }
 
 .c-blog-details {
+	width: 100%;
 	margin-top: 2rem;
 	height: 10rem;
 }
@@ -137,4 +144,27 @@
 	color: var(--Dark-Smoke);
 	height: 1.5rem;
 	margin-left: 0.8rem;
+}
+
+.c-blog__footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+}
+
+.c-blog-comments {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+
+.c-blog-comments__heading {
+	margin: 1rem;
+	color: var(--Dark-Smoke);
+}
+
+.c-comments-form__input-message {
+	width: 50rem;
 }
