--- a/Blog Page/Blog Page.css
+++ b/Blog Page/Blog Page.css
@@ -32,7 +32,6 @@
 	color: var(--Cadet-Blue);
 }
 .c-blog {
-	height: 2000px;
 	display: flex;
 	flex-direction: column;
 	justify-content: start;
@@ -77,8 +76,6 @@
 	justify-content: start;
 	align-items: center;
 	height: 2rem;
-
-	color: var(--English-Green);
 }
 .c-blog-details__date-created-icon {
 	height: 1.5rem;
@@ -183,4 +180,71 @@
 	background-color: var(--Cadet-Blue);
 	color: white;
 	border: 1px solid var(--Dark-Smoke);
+}
+
+.c-blog-comments__messages {
+	margin-top: 3rem;
+}
+
+.c-blog-comments__messages-item {
+	margin: 2rem 0;
+}
+
+.c-blog-comments__message {
+	text-align: justify;
+	font-size: 0.8rem;
+	font-style: italic;
+	font-weight: bold;
+	color: var(--Dark-Smoke);
+}
+
+.c-blog-comments__message-info {
+	display: flex;
+	width: 100%;
+	justify-content: flex-end;
+	align-items: center;
+}
+
+.c-blog-comments__user-created {
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	height: 1rem;
+}
+.c-blog-comments__user-created-icon {
+	height: 1rem;
+	width: 1rem;
+	fill: var(--Sheldon-Blue);
+	line-height: 1rem;
+}
+
+.c-blog-comments__user-created-name {
+	color: var(--Sheldon-Blue);
+	height: 1rem;
+	line-height: 1rem;
+	margin-left: 0.8rem;
+	font-size: 0.8rem;
+}
+
+.c-blog-comments__date-edited {
+	display: flex;
+	justify-content: start;
+	align-items: center;
+	height: 1rem;
+	color: var(--Sheldon-Blue);
+	margin-left: 2rem;
+}
+.c-blog-comments__date-edited-icon {
+	height: 1rem;
+	width: 1rem;
+	fill: var(--Sheldon-Blue);
+	line-height: 1rem;
+}
+
+.c-blog-comments__date-edited-date {
+	color: var(--Sheldon-Blue);
+	height: 1rem;
+	line-height: 1rem;
+	margin-left: 0.8rem;
+	font-size: 0.8rem;
 }
