--- a/Blog List/Blog List.css
+++ b/Blog List/Blog List.css
@@ -101,3 +101,25 @@
 	width: 45%;
 	line-height: 1.5rem;
 }
+
+.c-blogs-list {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-direction: column;
+	width: 100%;
+
+	height: 100%;
+}
+
+.c-form-button {
+	margin: 1rem;
+	width: 100%;
+}
+.c-form-button__createnew {
+	width: 100%;
+	background-color: var(--Deep-Space-Sparcle);
+	border: none;
+	color: white;
+	height: 2rem;
+}
