updated user list style and template

--- a/User List/User List.css
+++ b/User List/User List.css
@@ -62,10 +62,19 @@
 	height: 5rem;
 	width: 5rem;
 	border-radius: 50%;
-	background-image: url('../Images/ChloeAvatar.jpg');
+	/* background-image: url('../Images/ChloeAvatar.jpg');
 	background-size: cover;
 	background-repeat: no-repeat;
-	background-position: center;
+	background-position: center; */
+	background-color: red;
+	overflow: hidden;
+}
+
+.c-user__avatar-pic {
+	height: 100%;
+	width: 100%;
+	object-fit: cover;
+	object-position: center;
 }
 
 .c-user__info {
